--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script>
     // Fetch NASDAQ data (example: AAPL)
     async function fetchStockData() {
-      const response = await fetch('https://www.alphavantage.co/query?function=TIME_SERIES_DAILY&symbol=AAPL&apikey=YOUR_API_KEY');
+      const response = await fetch('https://www.alphavantage.co/query?function=TIME_SERIES_DAILY&symbol=AAPL&apikey=U5YYMQUDGQF9J4QU');
       const data = await response.json();
       
       // Format data for Lightweight Charts
